; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/ergodone/extr_expander.c_expander_read_row.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/ergodone/extr_expander.c_expander_read_row.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MATRIX_COLS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @expander_read_row() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i32, align 4
  %3 = call i32 (...) @expander_read_cols()
  store i64 0, i64* %1, align 8
  store i32 0, i32* %2, align 4
  br label %4

4:                                                ; preds = %22, %0
  %5 = load i32, i32* %2, align 4
  %6 = load i32, i32* @MATRIX_COLS, align 4
  %7 = icmp slt i32 %5, %6
  br i1 %7, label %8, label %25

8:                                                ; preds = %4
  %9 = load i32, i32* %2, align 4
  %10 = call i64 @expander_get_col(i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %21

12:                                               ; preds = %8
  %13 = load i32, i32* @MATRIX_COLS, align 4
  %14 = sub nsw i32 %13, 1
  %15 = load i32, i32* %2, align 4
  %16 = sub nsw i32 %14, %15
  %17 = zext i32 %16 to i64
  %18 = shl i64 1, %17
  %19 = load i64, i64* %1, align 8
  %20 = or i64 %19, %18
  store i64 %20, i64* %1, align 8
  br label %21

21:                                               ; preds = %12, %8
  br label %22

22:                                               ; preds = %21
  %23 = load i32, i32* %2, align 4
  %24 = add nsw i32 %23, 1
  store i32 %24, i32* %2, align 4
  br label %4

25:                                               ; preds = %4
  %26 = load i64, i64* %1, align 8
  ret i64 %26
}

declare dso_local i32 @expander_read_cols(...) #1

declare dso_local i64 @expander_get_col(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
